# beacon

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  IMPLEMENTATION.md  README.md  REQUIREMENTS.md  docker-compose.yml  preferences.md  pyproject.toml
config/: config.yaml
scripts/: migrate_add_columns.py
src/: config.py  database.py  discord_notifier.py  llm_filter.py  main.py  scraper.py  web.py
src/templates/: index.html
tests/: test_config.py  test_database.py  test_discord_notifier.py  test_llm_filter.py  test_scraper.py  test_web.py
