[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "beacon"
version = "0.1.0"
description = "AI-powered news aggregator for personalized local news"
requires-python = ">=3.14"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "ollama>=0.1.0",
    "pyyaml>=6.0",
    "sqlalchemy>=2.0.0",
    "discord-webhook>=1.3.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers"
pythonpath = ["."]
